@@ -61,71 +61,6 @@ class QTextStreamPrivate;
 
 class QLocale;
 
-#ifndef QT_NO_SYSTEMLOCALE
-class Q_CORE_EXPORT QSystemLocale
-{
-public:
-    QSystemLocale();
-    virtual ~QSystemLocale();
-
-    struct CurrencyToStringArgument
-    {
-        CurrencyToStringArgument() { }
-        CurrencyToStringArgument(const QVariant &v, const QString &s)
-            : value(v), symbol(s) { }
-        QVariant value;
-        QString symbol;
-    };
-
-    enum QueryType {
-        LanguageId, // uint
-        CountryId, // uint
-        DecimalPoint, // QString
-        GroupSeparator, // QString
-        ZeroDigit, // QString
-        NegativeSign, // QString
-        DateFormatLong, // QString
-        DateFormatShort, // QString
-        TimeFormatLong, // QString
-        TimeFormatShort, // QString
-        DayNameLong, // QString, in: int
-        DayNameShort, // QString, in: int
-        MonthNameLong, // QString, in: int
-        MonthNameShort, // QString, in: int
-        DateToStringLong, // QString, in: QDate
-        DateToStringShort, // QString in: QDate
-        TimeToStringLong, // QString in: QTime
-        TimeToStringShort, // QString in: QTime
-        DateTimeFormatLong, // QString
-        DateTimeFormatShort, // QString
-        DateTimeToStringLong, // QString in: QDateTime
-        DateTimeToStringShort, // QString in: QDateTime
-        MeasurementSystem, // uint
-        PositiveSign, // QString
-        AMText, // QString
-        PMText, // QString
-        FirstDayOfWeek, // Qt::DayOfWeek
-        Weekdays, // QList<Qt::DayOfWeek>
-        CurrencySymbol, // QString in: CurrencyToStringArgument
-        CurrencyToString, // QString in: qlonglong, qulonglong or double
-        UILanguages, // QStringList
-        StringToStandardQuotation, // QString in: QStringRef to quote
-        StringToAlternateQuotation, // QString in: QStringRef to quote
-        ScriptId, // uint
-        ListToSeparatedString, // QString
-        LocaleChanged, // system locale changed
-        NativeLanguageName, // QString
-        NativeCountryName // QString
-    };
-    virtual QVariant query(QueryType type, QVariant in) const;
-    virtual QLocale fallbackLocale() const;
-
-private:
-    QSystemLocale(bool);
-    friend QSystemLocale *QSystemLocale_globalSystemLocale();
-};
-#endif
-
 struct QLocalePrivate;
 class Q_CORE_EXPORT QLocale
 {
@@ -810,10 +745,6 @@ Q_CORE_EXPORT QDebug operator<<(QDebug, const QLocale &);
 #endif
 
 QT_END_NAMESPACE
-
-#ifndef QT_NO_SYSTEMLOCALE
-Q_DECLARE_METATYPE(QSystemLocale::CurrencyToStringArgument)
-#endif
 
 QT_END_HEADER
 
